--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Tangerine");
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
